# agent-framework

./: README.md  SKILL.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: test_main.py
